fixed the child cards spaces. Better alignment

--- a/client/src/components/Childcard/Childcard.css
+++ b/client/src/components/Childcard/Childcard.css
@@ -14,7 +14,7 @@
 }
 .card {
     text-align: center;
-    background-color: rgba(90, 128, 177, .75);
+    background-color: rgba(90, 128, 177, .85);
     padding: 30px;
     margin:20px;
     border-radius: 25px;
